[gd_scene load_steps=2 format=3 uid="uid://dixpb2jqldfox"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_a4r4n"]

[node name="Pause_menu" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a4r4n")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label_nombre" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"TitleLabel"
text = "Pause"
horizontal_alignment = 1

[node name="Button_resume" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="Button_retry" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Retry
"

[node name="Button_menu" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Main menu"

[node name="Button_exit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"
